Project/src/jsrc/matlab/syntaxanalysis/parser/MatlabParser.java
/* Generated By:JavaCC: Do not edit this line. MatlabParser.java */
package jsrc.matlab.syntaxanalysis.parser;

import jsrc.matlab.syntaxanalysis.syntaxtree.*;
import java.util.Vector;


public class MatlabParser implements MatlabParserConstants {

  static final public File File() throws ParseException {
   NodeOptional n0 = new NodeOptional();
   FunctionHeader n1;
   NodeListOptional n2 = new NodeListOptional();
   Statement n3;
   NodeToken n4;
   Token n5;
    if (jj_2_1(2147483647)) {
      n1 = FunctionHeader();
        n0.addNode(n1);
    } else {
      ;
    }
    label_1:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_1;
      }
      n3 = Statement();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    n5 = jj_consume_token(0);
      n5.beginColumn++; n5.endColumn++;
      n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new File(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionHeader FunctionHeader() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   OutputClause n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   NodeOptional n7 = new NodeOptional();
   IdentifierList n8;
   NodeToken n9;
   Token n10;
   NodeOptional n11 = new NodeOptional();
   NodeToken n12;
   Token n13;
    n1 = jj_consume_token(FUNCTION);
                   n0 = JTBToolkit.makeNodeToken(n1);
    if (jj_2_3(2147483647)) {
      n3 = OutputClause();
        n2.addNode(n3);
    } else {
      ;
    }
    n4 = Identifier();
    n6 = jj_consume_token(36);
            n5 = JTBToolkit.makeNodeToken(n6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n8 = IdentifierList();
        n7.addNode(n8);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    n10 = jj_consume_token(37);
             n9 = JTBToolkit.makeNodeToken(n10);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n13 = jj_consume_token(38);
                n12 = JTBToolkit.makeNodeToken(n13);
        n11.addNode(n12);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
     {if (true) return new FunctionHeader(n0,n2,n4,n5,n7,n9,n11);}
    throw new Error("Missing return statement in function");
  }

  static final public OutputClause OutputClause() throws ParseException {
   Output n0;
   NodeToken n1;
   Token n2;
    n0 = Output();
    n2 = jj_consume_token(39);
            n1 = JTBToolkit.makeNodeToken(n2);
     {if (true) return new OutputClause(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Output Output() throws ParseException {
   NodeChoice n0;
   Identifier n1;
   MultiOutput n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n1 = Identifier();
        n0 = new NodeChoice(n1, 0);
      break;
    case 40:
      n2 = MultiOutput();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Output(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public MultiOutput MultiOutput() throws ParseException {
   NodeToken n0;
   Token n1;
   IdentifierList n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(40);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = IdentifierList();
    n4 = jj_consume_token(41);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new MultiOutput(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   CommandList n1;
   ArrayUpdate n2;
   CallSt n3;
   AssignmentSt n4;
   CallAndMultipleAssignmentSt n5;
   IfSt n6;
   ForSt n7;
   WhileSt n8;
   SwitchSt n9;
   BreakSt n10;
   ReturnSt n11;
   Tic n12;
   PrintSt n13;
   PrintlnSt n14;
    if (jj_2_4(2147483647)) {
      n1 = CommandList();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_5(2147483647)) {
      n2 = ArrayUpdate();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_6(2147483647)) {
      n3 = CallSt();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_7(2147483647)) {
      n4 = AssignmentSt();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_8(2147483647)) {
      n5 = CallAndMultipleAssignmentSt();
        n0 = new NodeChoice(n5, 4);
    } else if (jj_2_9(2147483647)) {
      n6 = IfSt();
        n0 = new NodeChoice(n6, 5);
    } else if (jj_2_10(2147483647)) {
      n7 = ForSt();
        n0 = new NodeChoice(n7, 6);
    } else if (jj_2_11(2147483647)) {
      n8 = WhileSt();
        n0 = new NodeChoice(n8, 7);
    } else if (jj_2_12(2147483647)) {
      n9 = SwitchSt();
        n0 = new NodeChoice(n9, 8);
    } else if (jj_2_13(2147483647)) {
      n10 = BreakSt();
        n0 = new NodeChoice(n10, 9);
    } else if (jj_2_14(2147483647)) {
      n11 = ReturnSt();
        n0 = new NodeChoice(n11, 10);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIC:
        n12 = Tic();
        n0 = new NodeChoice(n12, 11);
        break;
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_15(2147483647)) {
          n13 = PrintSt();
        n0 = new NodeChoice(n13, 12);
        } else if (jj_2_16(2147483647)) {
          n14 = PrintlnSt();
        n0 = new NodeChoice(n14, 13);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Tic Tic() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(TIC);
              n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n4 = jj_consume_token(38);
               n3 = JTBToolkit.makeNodeToken(n4);
        n2.addNode(n3);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
     {if (true) return new Tic(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Command Command() throws ParseException {
   Identifier n0;
   NodeOptional n1 = new NodeOptional();
   Identifier n2;
    if (!getToken(2).toString().equals("=") && !getToken(2).toString().equals("(")) {

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    n0 = Identifier();
    if (jj_2_17(2147483647) && (!getToken(2).toString().equals("=") && !getToken(2).toString().equals("("))) {
      n2 = Identifier();
        n1.addNode(n2);
    } else {
      ;
    }
     {if (true) return new Command(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public CallSt CallSt() throws ParseException {
   Call n0;
   NodeOptional n1 = new NodeOptional();
   NodeToken n2;
   Token n3;
    n0 = Call();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n3 = jj_consume_token(38);
               n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
     {if (true) return new CallSt(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentSt AssignmentSt() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Expression n3;
   NodeOptional n4 = new NodeOptional();
   NodeToken n5;
   Token n6;
    n0 = Identifier();
    n2 = jj_consume_token(39);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n6 = jj_consume_token(38);
               n5 = JTBToolkit.makeNodeToken(n6);
        n4.addNode(n5);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
     {if (true) return new AssignmentSt(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public CallAndMultipleAssignmentSt CallAndMultipleAssignmentSt() throws ParseException {
   NodeToken n0;
   Token n1;
   IdentifierList n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   Call n7;
   NodeOptional n8 = new NodeOptional();
   NodeToken n9;
   Token n10;
    n1 = jj_consume_token(40);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = IdentifierList();
    n4 = jj_consume_token(41);
            n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(39);
            n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Call();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n10 = jj_consume_token(38);
                n9 = JTBToolkit.makeNodeToken(n10);
        n8.addNode(n9);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
     {if (true) return new CallAndMultipleAssignmentSt(n0,n2,n3,n5,n7,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayUpdate ArrayUpdate() throws ParseException {
   IndexedArray n0;
   NodeToken n1;
   Token n2;
   Expression n3;
   NodeOptional n4 = new NodeOptional();
   NodeToken n5;
   Token n6;
    n0 = IndexedArray();
    n2 = jj_consume_token(39);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n6 = jj_consume_token(38);
               n5 = JTBToolkit.makeNodeToken(n6);
        n4.addNode(n5);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
     {if (true) return new ArrayUpdate(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public IfSt IfSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeListOptional n3 = new NodeListOptional();
   Statement n4;
   NodeListOptional n5 = new NodeListOptional();
   ElseIf n6;
   NodeOptional n7 = new NodeOptional();
   ElseClause n8;
   NodeToken n9;
   Token n10;
    n1 = jj_consume_token(IF);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    label_2:
    while (true) {
      if (jj_2_18(2147483647)) {
        ;
      } else {
        break label_2;
      }
      n4 = Statement();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      n6 = ElseIf();
        n5.addNode(n6);
    }
     n5.nodes.trimToSize();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      n8 = ElseClause();
        n7.addNode(n8);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    n10 = jj_consume_token(END);
               n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new IfSt(n0,n2,n3,n5,n7,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public ElseIf ElseIf() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeListOptional n3 = new NodeListOptional();
   Statement n4;
    n1 = jj_consume_token(ELSEIF);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    label_4:
    while (true) {
      if (jj_2_19(2147483647)) {
        ;
      } else {
        break label_4;
      }
      n4 = Statement();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
     {if (true) return new ElseIf(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public ElseClause ElseClause() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   Statement n3;
    n1 = jj_consume_token(ELSE);
               n0 = JTBToolkit.makeNodeToken(n1);
    label_5:
    while (true) {
      if (jj_2_20(2147483647)) {
        ;
      } else {
        break label_5;
      }
      n3 = Statement();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
     {if (true) return new ElseClause(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public ForSt ForSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   Expression n5;
   NodeListOptional n6 = new NodeListOptional();
   Statement n7;
   NodeToken n8;
   Token n9;
    n1 = jj_consume_token(FOR);
              n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(39);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Expression();
    label_6:
    while (true) {
      if (jj_2_21(2147483647)) {
        ;
      } else {
        break label_6;
      }
      n7 = Statement();
        n6.addNode(n7);
    }
     n6.nodes.trimToSize();
    n9 = jj_consume_token(END);
              n8 = JTBToolkit.makeNodeToken(n9);
     {if (true) return new ForSt(n0,n2,n3,n5,n6,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileSt WhileSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeListOptional n3 = new NodeListOptional();
   Statement n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(WHILE);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    label_7:
    while (true) {
      if (jj_2_22(2147483647)) {
        ;
      } else {
        break label_7;
      }
      n4 = Statement();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    n6 = jj_consume_token(END);
              n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new WhileSt(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public SwitchSt SwitchSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeListOptional n3 = new NodeListOptional();
   Case n4;
   NodeToken n5;
   Token n6;
   NodeListOptional n7 = new NodeListOptional();
   Statement n8;
   NodeToken n9;
   Token n10;
    n1 = jj_consume_token(SWITCH);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      n4 = Case();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    n6 = jj_consume_token(OTHERWISE);
                    n5 = JTBToolkit.makeNodeToken(n6);
    label_9:
    while (true) {
      if (jj_2_23(2147483647)) {
        ;
      } else {
        break label_9;
      }
      n8 = Statement();
        n7.addNode(n8);
    }
     n7.nodes.trimToSize();
    n10 = jj_consume_token(END);
               n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new SwitchSt(n0,n2,n3,n5,n7,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public Case Case() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeChoice n2;
   StringLiteral n3;
   IntegerLiteral n4;
   NodeListOptional n5 = new NodeListOptional();
   Statement n6;
    n1 = jj_consume_token(CASE);
               n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      n3 = StringLiteral();
           n2 = new NodeChoice(n3, 0);
      break;
    case INTEGER_LITERAL:
      n4 = IntegerLiteral();
           n2 = new NodeChoice(n4, 1);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_10:
    while (true) {
      if (jj_2_24(2147483647)) {
        ;
      } else {
        break label_10;
      }
      n6 = Statement();
        n5.addNode(n6);
    }
     n5.nodes.trimToSize();
     {if (true) return new Case(n0,n2,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public BreakSt BreakSt() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
    n1 = jj_consume_token(BREAK);
                n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(38);
            n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new BreakSt(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public ReturnSt ReturnSt() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
    n1 = jj_consume_token(RETURN);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(38);
            n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new ReturnSt(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintSt PrintSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeToken n3;
   Token n4;
   NodeOptional n5 = new NodeOptional();
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(42);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    n4 = jj_consume_token(37);
            n3 = JTBToolkit.makeNodeToken(n4);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n7 = jj_consume_token(38);
               n6 = JTBToolkit.makeNodeToken(n7);
        n5.addNode(n6);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
     {if (true) return new PrintSt(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintlnSt PrintlnSt() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeToken n3;
   Token n4;
   NodeOptional n5 = new NodeOptional();
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(43);
                   n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    n4 = jj_consume_token(37);
            n3 = JTBToolkit.makeNodeToken(n4);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      n7 = jj_consume_token(38);
               n6 = JTBToolkit.makeNodeToken(n7);
        n5.addNode(n6);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
     {if (true) return new PrintlnSt(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
   ShortCircuitOrExp n0;
    n0 = ShortCircuitOrExp();
     {if (true) return new Expression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ShortCircuitOrExp ShortCircuitOrExp() throws ParseException {
   ShortCircuitAndExp n0;
   NodeListOptional n1 = new NodeListOptional();
   ShortCircuitOrExpRest n2;
    n0 = ShortCircuitAndExp();
    label_11:
    while (true) {
      if (jj_2_25(2147483647)) {
        ;
      } else {
        break label_11;
      }
      n2 = ShortCircuitOrExpRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ShortCircuitOrExp(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ShortCircuitOrExpRest ShortCircuitOrExpRest() throws ParseException {
   NodeToken n0;
   Token n1;
   ShortCircuitAndExp n2;
    n1 = jj_consume_token(44);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ShortCircuitAndExp();
     {if (true) return new ShortCircuitOrExpRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }
